fix: Adjust navigation icons to -14px when collapsed
- Changed margin-top from -12px to -14px
- Navigation icons now move up 14px total when sidebar is collapsed

--- a/src/components/layout/MainSidebar/MainSidebar.scss
+++ b/src/components/layout/MainSidebar/MainSidebar.scss
@@ -134,7 +134,7 @@
 
   // Ajustar posición de navegación cuando está colapsada
   &--collapsed &__nav {
-    margin-top: -12px;
+    margin-top: -14px;
   }
 
   &__secondary {
